--- a/thesis/conclusion/conclusion.tex
+++ b/thesis/conclusion/conclusion.tex
@@ -21,7 +21,7 @@ In this dissertation, we described studies characterizing HIV-1 latency, express
 \section{HIV-1 alternative splicing}
 	In Chapters \ref{chapPacBio} and \ref{chapRnaSeq}, we showed that HIV RNA spliceforms are more diverse than previously appreciated and estimated the abundances of viral spliceforms. We also showed that splicing at some splice sites vary between host subjects, between cell types and over the course of infection. Further characterization of viral splicing would be beneficial to the study and treatment of HIV-1 especially as there were some technical limitations to our research that might be improved upon using current techniques.
 	
-	We studied HIV splicing using droplet PCR \citep{Tewhey2009} and a set of customized primer in Chapter \ref{chapPacBio} and bulk sequencing of cellular mRNA in Chapter \ref{chapRnaSeq}. Sequencing biases and difficulties determining full length transcripts from short reads hindered characterization of HIV sequencing. One alternative to these techniques is the targeted capture and enrichment \citep{Depledge2011,Mercer2014} of HIV-specific sequences. Using probes targeted to conserved regions of HIV, similar to finding conserved regions for primers as in Chapter \ref{chapLamp}, would allow for enrichment of viral reads without the biases induced by primer-based PCR while still allowing for efficient use of sequencing effort.
+	We studied HIV splicing using droplet PCR \citep{Tewhey2009} and a set of customized primer in Chapter \ref{chapPacBio} and bulk sequencing of cellular mRNA in Chapter \ref{chapRnaSeq}. Sequencing biases and difficulties determining full length transcripts from short reads hindered characterization of HIV messages. One alternative to these techniques is the targeted capture and enrichment \citep{Depledge2011,Mercer2014} of HIV-specific sequences. Using probes targeted to conserved regions of HIV, similar to finding conserved regions for primers as in Chapter \ref{chapLamp}, would allow for enrichment of viral reads without the biases induced by primer-based PCR while still allowing for efficient use of sequencing effort.
 
 	The research in Chapter \ref{chapPacBio} was also limited by a short read bias in the PacBio sequencing. PacBio sequencing has improved \citep{Mosher2014} and additional long read sequencers have been developed \citep{Mikheyev2014,Jain2015,Kilianski2015}. In addition, Illumina MiSeq sequencers can now produce 25 million paired 300 bp reads in a single run \citep{Juenemann2013,Illumina2015} and better spliceform estimation methods are being developed \citep{Rossell2014,Bray2015}. These improved sequencing techniques might allow for more straightforward analysis of new samples and verification of our previous results.
 
@@ -37,7 +37,7 @@ In this dissertation, we described studies characterizing HIV-1 latency, express
 
 	%Characterization of changes over the replication cycle \citep{Mohammadi2013} and between subjects would be useful. Long-term nonprogressors still uncertain check whether splicing involved either due to host variation [[GWAS studies]] or virus [[that mutated virus]].
 
-	Disruption of RNA processing can drastically reduce viral replication \citep{Wentz1997,Caputi2004,Madsen2005,Paca-Uccaralertkun2006,Mandal2008}. Inhibition of cellular splicing factors reduces viral reproduction in many genome-wide siRNA screens \citep{Brass2008,Konig2008,Bushman2009} and several members of the spliceosome interact with viral proteins in affinity pulldowns \citep{Jager2012}. Small molecules that inhibit cellular SR splicing proteins and disrupt viral splicing show promise as antiretroviral therapies \citep{Fukuhara2006,Bakkour2007,Wong2011,Wong2013}. Characterization of splicing in cells treated with splicing inhibitors could reveal potential escape pathways and optimal combinations of drug therapies.
+	Disruption of RNA processing can drastically reduce HIV replication \citep{Wentz1997,Caputi2004,Madsen2005,Paca-Uccaralertkun2006,Mandal2008}. Inhibition of cellular splicing factors reduces the reproduction of HIV in many genome-wide siRNA screens \citep{Brass2008,Konig2008,Bushman2009} and several members of the spliceosome interact with viral proteins in affinity pulldowns \citep{Jager2012}. Small molecules that inhibit cellular SR splicing proteins and disrupt viral splicing show promise as antiretroviral therapies \citep{Fukuhara2006,Bakkour2007,Wong2011,Wong2013}. Characterization of splicing in cells treated with splicing inhibitors could reveal potential escape pathways and optimal combinations of drug therapies.
 
 
 \section{Host expression during HIV infection} 
@@ -47,7 +47,7 @@ In this dissertation, we described studies characterizing HIV-1 latency, express
 
 	Additionally, abortive infections can drive cell death \citep{Monroe2014,Doitsh2014} so our populations might be a mix of three responses; cells responding to a progressive infection, cells responding to an aborted infection and cells responding to neighbor cell infections. A useful control might be to infect cells with integrase-deficient virions to guarantee that all infections are aborted. This would provide a good measure of innate immune response and the effect of abortive infections undiluted by productive HIV infection and help to deconvolute the patterns seen in mixed populations.
 
-	HIV infection appeared to increase the abundance of intronic sequences. We observed a significant decrease of nonsense-mediated decay-related genes so perhaps these transcripts escape degradation due to decreased cellular RNA surveillance.  Alternatively, HIV Vpr protein has been reported to disrupt nuclear integrity and allow mixing of nuclear and cytoplasmic components \citep{Noronha2001}. These sequences might represent incompletely spliced mRNA that escaped into the cytoplasm before processing. Infection with a Vpr-deficient HIV virus and separate isolation of RNA from nuclear and cytoplasmic compartments \citep{Wilkinson1988,Trask2009,Solnestam2012} would test these hypotheses.
+	HIV infection appeared to increase the abundance of intronic sequences. Perhaps these transcripts escape degradation due to decreased cellular RNA surveillance or mistargeted export of incompletely spliced cellular transcripts by viral protein Rev.  Alternatively, HIV Vpr protein has been reported to disrupt nuclear integrity and allow mixing of nuclear and cytoplasmic components \citep{Noronha2001}. These sequences might represent incompletely spliced mRNA that escaped into the cytoplasm before processing. Infection with a Vpr-deficient HIV virus and separate isolation of RNA from nuclear and cytoplasmic compartments \citep{Wilkinson1988,Trask2009,Solnestam2012} would test these hypotheses.
 
 	We saw that chimeric sequences were almost entirely derived from read-in or -out from viral long terminal repeats or splicing from the viral splice donor D4 to human acceptors. With this knowledge, we could use targeted amplification of these three sites, analogous to integration site sequencing \citep{Schroder2002,Wang2007,Berry2014}, on cellular cDNA to get a much deeper and cleaner sampling of chimera formation. Comparison of these data to deeply sequenced integration site data from the same samples might reveal associations between integration location and chimera formation.
 
@@ -74,18 +74,18 @@ In this dissertation, we described studies characterizing HIV-1 latency, express
 		
 		A LAMP chip with subtype-specific primers would also allow the detection of intersubtype superinfections. Superinfection of a single individual with multiple distinct strains of HIV is common in high risk individuals \citep{Piantadosi2007,Powell2009,Ronen2013,Wagner2013,Redd2014} and the general population \citep{Redd2012a}. Superinfection with a phenotypically different strain of HIV can lead to disease progression \citep{Jost2002,Fang2004,Blick2007,Gottlieb2007,Streeck2008,Clerc2010} or drug resistance \citep{Smith2005}. Superinfection also allows recombination between divergent strains \citep{Fang2004,Pernas2006,Blick2007,Piantadosi2007,Streeck2008} and this rapid exchange of genetic information can lead to more fit recombinant strains and worsen the global epidemic \citep{Robertson1995,Gao1999,Hahn2000,Malim2001,Blick2007}. LAMP detection of superinfection could allow early intervention and suppression in superinfected individuals.
 
-		The techniques described in Chapter \ref{chapLamp} also allow for rapid development of detection assays for novel pathogens. For example, in a recent outbreak in West Africa, Zaire ebolavirus has infected over 26,000 confirmed, probable and suspected cases and caused over 11,000 reported deaths \citep{Gire2014,WHOERT2014,WHO2015}. Early detection and quarantine are essential to the control of this epidemic \citep{Chowell2014}. Amplification of Ebolavirus nucleic acid through polymerase chain reaction is the best diagnostic test currently available but the necessary resources are often not available in these resource-poor regions \citep{Fauci2014,WHO2015a}. Antigen-based tests are quicker and available at the point-of-care but are not as accurate or sensitive as polymerase chain reaction tests and are still in limited supply \citep{WHO2015a}.  Loop-mediated isothermal amplification offers the potential for rapid, sensitive and efficient detection of Ebolavirus RNA but available LAMP primers \citep{Kurosaki2007} do not match the current outbreak strain. Using sequences from the recent outbreak \citep{Gire2014,Hoenen2015} and the methods described in Chapter \ref{chapLamp}, we designed primers to match all known Zaire ebolavirus (Figure \ref{figEbolaConsensus}). These primer combined with simple lab-on-a-chip devices for purifying blood plasma \citep{Liu2013} and imaging fluorescent signals \citep{Liu2011,Liu2014a} could allow rapid point-of-care detection of Ebolavirus.
+		The techniques described in Chapter \ref{chapLamp} also allow for rapid development of detection assays for novel pathogens. For example, in a recent outbreak in West Africa, Zaire ebolavirus has infected over 26,000 confirmed, probable and suspected cases and caused over 11,000 reported deaths \citep{Gire2014,WHOERT2014,WHO2015}. Early detection and quarantine are essential to the control of this epidemic \citep{Chowell2014}. Amplification of Ebola virus nucleic acid through polymerase chain reaction is the best diagnostic test currently available but the necessary resources are often not available in these resource-poor regions \citep{Fauci2014,WHO2015a}. Antigen-based tests are quicker and available at the point-of-care but are not as accurate or sensitive as polymerase chain reaction tests and are still in limited supply \citep{WHO2015a}.  Loop-mediated isothermal amplification offers the potential for rapid, sensitive and efficient detection of Ebola virus RNA but available LAMP primers \citep{Kurosaki2007} do not match the current outbreak strain. Using sequences from the recent outbreak \citep{Gire2014,Hoenen2015} and the methods described in Chapter \ref{chapLamp}, we designed primers to match all known Zaire ebolavirus (Figure \ref{figEbolaConsensus}). These primer combined with simple lab-on-a-chip devices for purifying blood plasma \citep{Liu2013} and imaging fluorescent signals \citep{Liu2011,Liu2014a} could allow rapid point-of-care detection of Ebola virus.
 
 	\begin{figure}
 		\centering
 		%%[[FIX THIS FIGURE and name Ebola right]]
 		\includegraphics[width=.6\textwidth]{ebolaConsensus.pdf} %REMOVE%
 		\includegraphics[width=.6\textwidth]{loop_bases.pdf} %REMOVE%
-		\caption[Ebola RT-LAMP primers design]{Bioinformatic analysis to design Ebolavirus RT-LAMP primers. A) Conservation of sequence in Ebolavirus. Ebolavirus genomes (n = 131) from Genbank and sequences from the recent Zaire Ebolavirus outbreak \citep{Gire2014} were aligned and conservation calculated. The x-axis shows the coordinate on the Ebola genome, the y-axis shows the proportion of sequences matching the consensus for each 21 base segment of the genome (red points). The black line shows a 101 base sliding average over these proportions. The vertical red shading shows the region targeted for LAMP primer design that was used as input into the EIKEN primer design tool and grey shading indicates the area covered by the optimized primer set. Numbering is relative to the Ebola Mayinga sequence. B) Aligned genomes, showing the locations of the LAMP primers. Sequences in the grey-shaded region in A are shown, with DNA bases color-coded as shown at the lower right. Each row indicates an Ebolavirus sequence and each column a base in that sequence. Horizontal lines separate Ebolavirus outbreaks (SLE: Seirra Leone, GIN: Guinea, COD: DR Congo, GAB: Gabon). Arrows indicate the strand targeted by each primer. Primers targeting the negative strand of the virus are shown as reverse compliments for ease of viewing.}
+		\caption[Ebola RT-LAMP primers design]{Bioinformatic analysis to design Ebola virus RT-LAMP primers. A) Conservation of sequence in Ebola virus. Ebola virus genomes (n = 131) from Genbank and sequences from the recent Zaire ebolavirus outbreak \citep{Gire2014} were aligned and conservation calculated. The x-axis shows the coordinate on the Ebola genome, the y-axis shows the proportion of sequences matching the consensus for each 21 base segment of the genome (red points). The black line shows a 101 base sliding average over these proportions. The vertical red shading shows the region targeted for LAMP primer design that was used as input into the EIKEN primer design tool and grey shading indicates the area covered by the optimized primer set. Numbering is relative to the Ebola Mayinga sequence. B) Aligned genomes, showing the locations of the LAMP primers. Sequences in the grey-shaded region in A are shown, with DNA bases color-coded as shown at the lower right. Each row indicates an Ebola virus sequence and each column a base in that sequence. Horizontal lines separate Ebola virus outbreaks (SLE: Seirra Leone, GIN: Guinea, COD: DR Congo, GAB: Gabon). Arrows indicate the strand targeted by each primer. Primers targeting the negative strand of the virus are shown as reverse compliments for ease of viewing.}
 		\label{figEbolaConsensus}
 	\end{figure}
 
 \subsection{Conclusions}
-	These studies contribute to the study and treatment of HIV-1 by revealing aspects of latency, expression and host response. They highlight the importance of primary cell models and the effects that host cell can have on viral processes. With rapidly increasing sequencing throughput, studies like those presented here offer the opportunity for a deeper and broader understanding of HIV-1 biology and host response and further development of diagnostics and therapeutics.
+	These studies contribute to the study and treatment of HIV-1 by revealing aspects of latency, expression and host response. They highlight the importance of primary cell models and the effects that host cell can have on viral processes. With rapidly increasing sequencing throughput, further studies like those presented here offer the opportunity for a deeper and broader understanding of HIV-1 biology and host response and further development of diagnostics and therapeutics.
 
 \end{document}
