--- a/thesis/intro/intro.tex
+++ b/thesis/intro/intro.tex
@@ -17,7 +17,7 @@
 	
 	A virus similar to HIV causing AIDS in monkeys was soon discovered in macaques \citep{Daniel1985,Peeters1989} and many other primates \citep{Peeters2001}. HIV-1 appeared most similar to a virus found in chimpanzees \citep{Peeters1989,Huet1990} and surveys of wild chimpanzees in Africa revealed a closely related simian immunodeficiency virus infecting chimpanzees in central Africa \citep{Gao1999,Keele2006,VanHeuverswyn2007}.
 	
-	The ancestor of HIV-1 was likely transmitted from a chimpanzee to a human, likely during harvest of chimpanzees for food \citep{Bowen-Jones1999,Hahn2000,Peeters2002,Wolfe2004,Wolfe2005,Kalish2005}, in the forests of southeastern Cameroon. The virus was transported down the Sangha River \citep{Sharp2008} to the city of Kinshasha, where HIV-1 began its global spread \citep{Vidal2000,Vangroenweghe2001,Worobey2008,Faria2014}. A combination of social upheaval, increased mobility, urbanization and mass vaccination campaigns with unsterilized needles appear to have provided fuel for the growing epidemic \citep{Chitnis2000,deSousa2010,deSousa2012,Faria2014}. A virus appears to have been carried from Africa to Haiti in the 1960s, perhaps by workers returning home from an exchange program \citep{Piot1984,Vangroenweghe2001}, and then into the US in the 1970s \citep{Gilbert2007} before being detected in the US in 1981. In the past 34 years, HIV-1 has spread to over 78 million people and caused over 35 million deaths \citep{UNAIDSCGA2014}.
+	Thus, the ancestor of HIV-1 was likely transmitted from a chimpanzee to a human, likely during harvest of chimpanzees for food \citep{Bowen-Jones1999,Hahn2000,Peeters2002,Wolfe2004,Wolfe2005,Kalish2005}, in the forests of southeastern Cameroon. The virus was probably transported down the Sangha River \citep{Sharp2008} to the city of Kinshasha, where HIV-1 began its global spread \citep{Vidal2000,Vangroenweghe2001,Worobey2008,Faria2014}. A combination of social upheaval, increased mobility, urbanization and mass vaccination campaigns with unsterilized needles appear to have provided fuel for the growing epidemic \citep{Chitnis2000,deSousa2010,deSousa2012,Faria2014}. A virus appears to have been carried from Africa to Haiti in the 1960s, perhaps by workers returning home from an exchange program \citep{Piot1984,Vangroenweghe2001}, and then into the US in the 1970s \citep{Gilbert2007} before being detected in the US in 1981. In the past 34 years, HIV-1 has spread to over 78 million people and caused over 35 million deaths \citep{UNAIDSCGA2014}.
 
 	%siv cpz is itself a recombinate http://www.sciencemag.org/content/300/5626/1713.full
 	
@@ -33,7 +33,7 @@
 
 	In the early days of the epidemic, there were no tests to detect the virus, and no treatments.  The presence of the virus was often revealed by the onset of AIDS. Opportunistic infections \citep{Moore1996} and death usually followed soon after. The median survival time after diagnosis with AIDS was about 1 year \citep{Rothenberg1987,Vella1992}. 
 
-	Isolation of the virus allowed the detection through assays of antibody response. Testing revealed that, from infection, patients had a median survival time of around a decade \citep{Lui1986,Deschamps2000,Harrison2010,CGAIDSIHIVS2000}. % and thus that the virus had an extremely long period of clinical latency with few specific symptoms while remaining infectious.
+	Isolation of the virus allowed the detection of HIV infection through assays of antibody response to viral proteins. Testing revealed that patients had a median survival time of around a decade from initial infection \citep{Lui1986,Deschamps2000,Harrison2010,CGAIDSIHIVS2000}. % and thus that the virus had an extremely long period of clinical latency with few specific symptoms while remaining infectious.
 	
 	In 1987, the successful trial of the reverse transcriptase inhibitor azidothymidine provided the first hope for treatment \citep{Fischl1987,Fischl1989,Volberding1990} but it soon became apparent that the fast mutation rate of HIV \citep{Hahn1986,Preston1988,Roberts1988,Mansky1995,Mansky1996,Abram2010,Achuthan2014} and strong selection by drug therapy could quickly create drug-resistant forms of virus in patients receiving single drug therapy \citep{Larder1989,Larder1989a,Land1990,Boucher1990,Richman1990,Richman1991,Fitzgibbon1992,Richman1994,Schuurman1995,Schmit1996}. Even with therapy, median survival time from AIDS diagnosis rose to only about 2 years \citep{Creagh-Kirk1988,Fischl1989,Moore1992,Vella1992}. 
 	
@@ -144,9 +144,9 @@
 					(protease) is a dimeric aspartyl protease \citep{Wlodawer1989} that cleaves viral polyproteins Gag and Pol \citep{Kraeusslich1989,Kohl1988}. 
 			\end{description}
 		\item[Env]
-			gp160 is a trimeric transmembrane protein that mediates entry through fusion of viral and cellular membrane by binding its receptor CD4 \citep{Dalgleish1984,Klatzmann1984,Lifson1986,Lifson1986a,Maddon1986} and coreceptors CXCR4 \citep{Feng1996}, CCR3 or CCR5 \citep{Choe1996,He1997}. gp160 is cleaved into its active form, consisting of two subunits gp41 and gp120 \citep{Veronese1985}, by cellular furin protease \citep{Hallenberger1992}. The envelope protein is highly glycosylated to form a mutable `glycan shield' against host adaptive immune response \citep{Wei2003}. There are about 14 Env proteins per virion \citep{Zhu2006}. Env sequence is highly variable within and between patients \citep{Holmes1992,Shankarappa1999} due to positive selection from host immune recognition \citep{Bonhoeffer1995,Wolinsky1996,Ross2002}. %positive selection at same sites over time correlate with slower progression \citep{Wolinsky1996,Ross2002} 1\% distance increase diversity in env per year (decreases later in infection) \citep{}
+			gp160 (envelope) is a trimeric transmembrane protein that mediates entry through fusion of viral and cellular membrane by binding its receptor CD4 \citep{Dalgleish1984,Klatzmann1984,Lifson1986,Lifson1986a,Maddon1986} and coreceptors CXCR4 \citep{Feng1996}, CCR3 or CCR5 \citep{Choe1996,He1997}. gp160 is cleaved into its active form, consisting of two subunits gp41 and gp120 \citep{Veronese1985}, by cellular furin protease \citep{Hallenberger1992}. The envelope protein is highly glycosylated to form a mutable `glycan shield' against host adaptive immune response \citep{Wei2003}. There are about 14 Env proteins per virion \citep{Zhu2006}. Env sequence is highly variable within and between patients \citep{Holmes1992,Shankarappa1999} due to positive selection from host immune recognition \citep{Bonhoeffer1995,Wolinsky1996,Ross2002}. %positive selection at same sites over time correlate with slower progression \citep{Wolinsky1996,Ross2002} 1\% distance increase diversity in env per year (decreases later in infection) \citep{}
 		\item[Tat]
-			 protein is a transactivator of expression from the HIV-1 long terminal repeat \citep{Sodroski1985,Sodroski1985a,Cullen1986}. The virus does not replicate efficiently without this transactivation \citep{Dayton1986}. Tat may also regulate cellular expression such as downregulation of major histocompatibility complex type I expression \citep{Howcroft1993}.  Tat may suppress miRNA silencing pathway \citep{Bennasser2005,Triboulet2007,Qian2009} but this remains controversial \citep{Lin2007}.
+			 (trans-activator of transcription) protein is a transactivator of expression from the HIV-1 long terminal repeat \citep{Sodroski1985,Sodroski1985a,Cullen1986}. The virus does not replicate efficiently without this transactivation \citep{Dayton1986}. Tat may also regulate cellular expression such as downregulation of major histocompatibility complex type I expression \citep{Howcroft1993}.  Tat may suppress miRNA silencing pathway \citep{Bennasser2005,Triboulet2007,Qian2009} but this remains controversial \citep{Lin2007}.
 		\item[Rev]
 			(regulator of expression of virion proteins) is a transactivator protein that shuttles between the nucleus and cytoplasm \citep{Meyer1994} and causes the export of partially spliced and unspliced viral transcripts \citep{Sodroski1986,Feinberg1986,Knight1987,Malim1988,Gutman1988} from the nucleus through the recognition of a rev response element \citep{Malim1989,Malim1989a}.
 		\item[Nef]
@@ -156,11 +156,11 @@
 		\item[Vif]
 			(virion infectivity factor) counteracts the cellular restriction factor APOBEC3G \citep{Sheehy2002} by excluding APOBEC3G from incorporation into the virion \citep{Mariani2003} and causing APOBEC3G to be ubiquitinated and degraded \citep{Sheehy2003,Marin2003,Yu2003}. APOBEC3G is otherwise packaged into virions \citep{Harris2003} and deaminates the HIV genome during reverse transcription causing G-to-A hypermutation \citep{Harris2003,Mangeat2003,Zhang2003,Lecossier2003}.
 		\item[Vpu]
-			Vpu (viral protein U) \citep{Cohen1988,Strebel1988} is a small integral membrane protein which has two known functions; degradation of CD4 and downregulation of BST-2 from the cell membrane. Vpu causes cellular CD4 to be ubiquitinated and degraded \citep{Willey1992,Bour1995} which prevents interactions between progeny virus and host cell CD4 receptor \citep{Marshall1992,Lama1999,Ross1999,Cortes2002} and superinfection by other viruses \citep{Benson1993}  while also releasing Env proteins from CD4 interactions in the endoplasmic reticulum \citep{Crise1990,Bour1991}. Vpu also counteracts the cellular restriction factor BST-2, which would otherwise interfere with viral budding \citep{Neil2008,VanDamme2008}. Vpu does not appear to be found in the virion \citep{Strebel1989}.
+			(viral protein U) \citep{Cohen1988,Strebel1988} is a small integral membrane protein which has two known functions; degradation of CD4 and downregulation of BST-2 from the cell membrane. Vpu causes cellular CD4 to be ubiquitinated and degraded \citep{Willey1992,Bour1995} which prevents interactions between progeny virus and host cell CD4 receptor \citep{Marshall1992,Lama1999,Ross1999,Cortes2002} and superinfection by other viruses \citep{Benson1993}  while also releasing Env proteins from CD4 interactions in the endoplasmic reticulum \citep{Crise1990,Bour1991}. Vpu also counteracts the cellular restriction factor BST-2, which would otherwise interfere with viral budding \citep{Neil2008,VanDamme2008}. Vpu does not appear to be found in the virion \citep{Strebel1989}.
 			%cd4 degradation 
 	\end{description}
 
-	A strong selective pressure for genome compactness \citep{Gelinas1986,Herman1987,Shin2000} pushes HIV and other lentiviruses to subvert host cell alternative splicing pathways to allow tighter packing of their genetic information. Through weak splice sites \citep{Kammler2006} and overlapping reading frames (Figure \ref{figHIVGenome}), the virus manages to produce regulated quantities of these nine proteins and polyproteins from its single transcription start site and less than 10,000 base genome \citep{Stoltzfus2009}.
+	A strong selective pressure for genome compactness \citep{Gelinas1986,Herman1987,Shin2000} pushes HIV and other lentiviruses to subvert host cell alternative splicing pathways to allow tighter packing of their genetic information. Through weak splice sites \citep{Kammler2006} and overlapping reading frames (Figure \ref{figHIVGenome}), the virus manages to produce regulated quantities of these nine proteins and polyproteins from its single transcription start site and less than 10 kilobase genome \citep{Stoltzfus2009}.
 
 	\begin{figure}
 		\centering
@@ -227,6 +227,8 @@
 	Alternative splicing may also play an unappreciated role in HIV-host interactions. Viral proteins interact with components of the cellular splicing complex \citep{Tange1996,Berro2006,Jager2012}. These interactions have been reported to change splicing in viral \citep{Berro2006,Bohne2007,Jablonski2010} and cellular transcripts \citep{Kuramitsu2005,Hashizume2007} and raise the possibility that the virus has evolved to alter host splicing. Although infection has been shown to cause genome-wide changes in the expression of cellular genes \citep{Vahey2002,Wout2003,Mitchell2003,Rotger2010,Chang2011}, no genome-wide study of cellular alternative splicing during HIV infection has ever been reported.
 
 	Several viral proteins affect mRNA abundances. Rev causes export of unspliced viral mRNA that would otherwise be trapped in the nucleus \citep{Legrain1989} to be exported \citep{Fischer1994,Pollard1998} and may also interact with splicing factors to alter viral splicing \citep{Tange1996}. The HIV protein Tat is best known for its transactivation of viral transcription \citep{Sodroski1985,Jones1994} and triggering apoptosis in uninfected cells \citep{McCloskey1997,Campbell2004} but Tat also appears to independently affect alternative splicing of viral transcripts\citep{Berro2006,Bohne2007,Jablonski2010,Miller2011}. Viral protein Vpr is known to cause cell cycle arrest \citep{Rogel1995} with corresponding changes in expression. Vpr also appears to alter alternative splicing of some cellular transcripts \citep{Kuramitsu2005,Hashizume2007} and interact with the SMN complex \citep{Jager2012}, which assembles spliceosomal snRNP \citep{Gubitz2004}. Although all three of these proteins modify viral splicing, whether they also cause widespread alterations in cellular splicing is unknown.
+
+	HIV infection also appears to induce the expression of certain human endogenous retroviruses (HERVs) \citep{Contreras-Galindo2006,Laderoute2007,Contreras-Galindo2007,Contreras-Galindo2013,Bhardwaj2014,Vincendeau2015} and retrotransposons \citep{Jones2013}. These HERV and retrotransposon mRNA and their translated proteins offer potential markers of infection and vaccine targets \citep{Boller1997,Buescher2005,Garrison2007,Tandon2011,SenGupta2011,Jones2012} but no genome-wide screen of the effects of HIV infection on the transcription of these elements has been reported.
 
 	In Chapter \ref{chapRnaSeq}, we investigate splicing and expression during HIV infection and report global changes in intron retention and in the expression of endogenous retrovirus and retrotransposons.
 	
