--- a/thesis/penn_thesis_style.sty
+++ b/thesis/penn_thesis_style.sty
@@ -15,7 +15,12 @@
 
 
 %formatting
-%\usepackage{newcent}
+%\usepackage{newcent} %font
+%\usepackage{lmodern} %font
+%\usepackage{libertine}
+\usepackage[libertine,cmintegrals,cmbraces,vvarbb]{newtxmath} %libertine font
+\usepackage[scaled=0.95]{inconsolata} %monospace font
+%\usepackage{classicthesis} %font
 \usepackage[final]{microtype}
 %try to fix bad lines
 \setlength{\emergencystretch}{1em}
